--- a/Downloads/Cozy-Fall-Jam-2022/.gitattributes
+++ b/Downloads/Cozy-Fall-Jam-2022/.gitattributes
@@ -1,2 +1,3 @@
 *.ucas filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+D:/GitHub/Game-Jams/Downloads/Cozy-Fall-Jam-2022/Imposter-Build filter=lfs diff=lfs merge=lfs -text
